-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: core-libs
-
None
The spec and implementation for the modifier mask for array classes do not include the ACC_IDENTITY bits.
The draft JEP, and specs specify that arrays are identity objects but this is not reflected in the APIs.
The spec for Class.getModifiers() identifies only a few specific bits that are defined for arrays and primitive classes. The others are left undefined.
The APIs that depend on the Class.getModifier() bits include:
- Class.isIdentity() - 0x20, except for arrays that needs to be special cased
- Class.accessFlags() - maps the bits to a set of AccessFlags, except arrays are special cased
A consistent view across these APIs without special casing will prevent applications from having to know the special cases and work around them.
The spec for array class modifiers should be updated to specify ACC_IDENTITY.
Perhaps the spec should require unused bits to be zero.
The effect on implementations should be investigated.
The draft JEP, and specs specify that arrays are identity objects but this is not reflected in the APIs.
The spec for Class.getModifiers() identifies only a few specific bits that are defined for arrays and primitive classes. The others are left undefined.
The APIs that depend on the Class.getModifier() bits include:
- Class.isIdentity() - 0x20, except for arrays that needs to be special cased
- Class.accessFlags() - maps the bits to a set of AccessFlags, except arrays are special cased
A consistent view across these APIs without special casing will prevent applications from having to know the special cases and work around them.
The spec for array class modifiers should be updated to specify ACC_IDENTITY.
Perhaps the spec should require unused bits to be zero.
The effect on implementations should be investigated.
- duplicates
-
JDK-8334338 [lworld] mismatch between Class::isIdentity and Class::accessFlags for array classes
-
- Closed
-
- relates to
-
JDK-8334747 [lworld] C1 needs adjustments after JDK-8294866
-
- Resolved
-
- links to
-
Commit
openjdk/valhalla/83b94744
-
Review(lworld)
openjdk/valhalla/1141