8294866: [lworld] Array classes modifier mask should include identity bits Add ACC_IDENTITY to array classes when --enable-preview Update tests